--- a/css/global.css
+++ b/css/global.css
@@ -84,7 +84,7 @@
 :root {
 	
 	/* #c20b0b in decimal RGB */
-	--main-color: rgb(194,11,11);
+	--main-color: #045BA8;
 	--main-color-rgb:194,11,11;
 	
 	/* #5a5a5a in decimal RGB */
